src/layout/CommunitySection/CommunitySection.scss
@use "src/styles/mixins" as *;

@keyframes rotate-background {
	from {
		background-position: 0 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	to {
		background-position: 0 50%;
	}
}

// Center our buttons
:global(#community-section .buttons-spacer) {
	justify-content: center;

	:global(.button.style-hyperlink) {
		color: var(--fds-accent-text-primary);
	}
}

.community-section- {
	// Since we need to always contrast against a
	// light-ish background, we'll need to hardcode
	// some variables.
	&text {
		text-align: center;
		--fds-solid-background-base: hsl(0, 0%, 95%);
		--fds-text-primary: hsl(0, 0%, 13%);
		--fds-text-secondary: hsl(0, 0%, 16%);
		--fds-text-tertiary: var(--fds-text-secondary);
		--fds-subtle-fill-secondary: hsl(0, 0%, 0%, 0.095);
		--fds-subtle-fill-tertiary: hsl(0, 0%, 0%, 0.024);
		--fds-subtle-fill-disabled: transparent;
		--fds-accent-text-primary: hsl(var(--fds-accent-dark-3));
		--fds-accent-text-tertiary: hsl(var(--fds-accent-dark-2));

		// Align descriptions to center
		p {
			margin-inline: auto;
		}
	}

	// Inner card element
	// Encompasses the content of the community section
	&card {
		@include flex($direction: column, $justify: center, $align: center);
		position: relative;
		z-index: 0;
		inline-size: 100%;
		max-inline-size: 2048px;
		min-block-size: 600px;
		padding: 72px 48px;
		border-radius: var(--fds-overlay-corner-radius);
		background-color: #f9f9f9;
		box-shadow: 0 2.74416px 2.74416px hsl(0, 0%, 0%, 3%),
		0 5.48831px 5.48831px hsl(0, 0%, 0%, 4%),
		0 13.7208px 10.9766px hsl(0, 0%, 0%, 5%),
		0 20.5812px 20.5812px hsl(0, 0%, 0%, 6%),
		0 41.1623px 41.1623px hsl(0, 0%, 0%, 7%),
		0 96.0454px 89.1851px hsl(0, 0%, 0%, 9%);

		.rainbow-background {
			position: absolute;
			inset-block-start: 0;
			inset-inline-start: 0;
			z-index: -1;
			inline-size: 100%;
			block-size: 100%;
			border-radius: var(--fds-overlay-corner-radius);

			animation: rotate-background 15s infinite linear;

			background-color: hsl(282, 23%, 78%);
			background-image: radial-gradient(at 68% 34%, hsla(233, 72%, 73%, 1) 0, transparent 43%),
			radial-gradient(at 51% 0%, hsla(254, 79%, 75%, 1) 0, transparent 57%),
			radial-gradient(at 80% 2%, hsla(274, 88%, 72%, 1) 0, transparent 41%),
			radial-gradient(at 96% 100%, hsla(254, 89%, 65%, 1) 0, transparent 47%),
			radial-gradient(at 1% 84%, hsla(233, 72%, 73%, 1) 0, transparent 41%),
			radial-gradient(at 19% 100%, hsla(262, 73%, 70%, 1) 0, transparent 44%),
			radial-gradient(at 46% 100%, hsla(254, 79%, 75%, 1) 0, transparent 49%),
			radial-gradient(at 92% 72%, hsla(282, 24%, 79%, 1) 0, transparent 43%);
			background-size: 150% 150%;
		}
	}
}

// Contributors
// Left scroller animation
@keyframes contributors-left {
	to {
		transform: translateX(50%);
	}
}

// Right scroller animation
@keyframes contributors-right {
	to {
		transform: translateX(-50%);
	}
}

// Contributor cards
.contributors- {
	// Contributors container
	// Serves no other purpose other than spacing it from the main text.
	&container {
		position: relative;
		inline-size: 100vw;
		max-inline-size: 2800px;

		// Preserve box-shadows when overflow is hidden
		margin-block-end: -128px;
		padding: 64px 0 128px 0;
		overflow: hidden;

		// Fade gutters
		// Seamlessly fades incoming/outgoing cards into the section at large resolutions.
		&::before,
		&::after {
			position: absolute;
			z-index: 1;
			inline-size: 96px;
			block-size: 100%;
			@media screen and (width > 2800px) {
				content: "";
			}
		}

		&::before {
			inset-inline-start: 0;
			background-image: linear-gradient(
							90deg,
							var(--fds-solid-background-secondary),
							transparent
			);
		}

		&::after {
			inset-inline-end: 0;
			background: linear-gradient(
							90deg,
							transparent,
							var(--fds-solid-background-tertiary)
			);
		}
	}

	// Contributor rows
	&row {
		position: relative;
		margin-block-end: 12px;
		white-space: nowrap;

		// Space out contributor cards
		:global(.contributor) {
			margin-inline-end: 12px;
		}

		// Add some variation between rows
		&:nth-child(even) {
			inset-inline-start: 24px;
			float: left;
			animation: contributors-right 80s linear infinite alternate;
		}

		&:nth-child(odd) {
			inset-inline-start: -24px;
			float: right;
			animation: contributors-left 80s linear infinite alternate;
		}

		// Prevent extra bottom margins
		&:last-child {
			margin: 0;
			animation-delay: 2s;
		}
	}
}

// Community section small device support
@media screen and (width < 768px) {
	// We have less space to work with here,
	// so we'll decrease the padding of the card.
	.community-section-card {
		padding: 24px;

		// The header also starts to look bad when it
		// wraps too much, so decrease the font-size
		h2 {
			font-size: 3.2rem;
		}
	}
}

